--- a/scss/blocks/_block-rappresent.scss
+++ b/scss/blocks/_block-rappresent.scss
@@ -1,6 +1,6 @@
 .rappresent {
   min-height: 492px;
-  background: $silver;
+  padding: $space-4 0;
   @include respond-to (768) {
     padding: 0 $space-2;
   }
@@ -41,8 +41,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 97px $space-4 $space-4;
+
     @include respond-to(768) {
+      padding: 97px $space-4 $space-4;
       align-items: end;
 
     }
